--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.5.0",
     "bootstrap": "^5.3.1",
     "jquery": "^3.7.1",
+    "leaflet": "^1.9.4",
     "popper.js": "^1.16.1"
   }
 }
